RESOLVED FIXED208332
AX: accessibilityReplaceRange:withText: doesn't post an AXValueChanged notification like when typing with kb
https://bugs.webkit.org/show_bug.cgi?id=208332
Summary AX: accessibilityReplaceRange:withText: doesn't post an AXValueChanged notifi...
Canhai Chen
Reported 2020-02-27 12:08:04 PST
Created attachment 391895 [details] sample html with text fields Summary: When calling the replace with range API for a web textfield, VoiceOver does not get an AXValueChanged notification from the web area like it does when typing with the keyboard. Steps To Reproduce: 1. Open a web page with a web textfield. (text.html) 2. Type in the first textfield with VO and a Braille display Results: VO gets a AXValueChanged notification for the textfield, and an AXSelectedTextChanged notification from the web area. These same notifications come in when typing with the keyboard. The difference is when typing with the keyboard, VO also gets an AXValueChanged notification from the web area. There should be a AXValueChanged notification since calling the API changes the value of the textfield. Regression: No
Attachments
sample html with text fields (974 bytes, text/html)
2020-02-27 12:08 PST, Canhai Chen
no flags
Patch (12.12 KB, patch)
2020-02-27 15:44 PST, Canhai Chen
no flags
Patch (12.12 KB, patch)
2020-03-10 17:57 PDT, Canhai Chen
no flags
Canhai Chen
Comment 1 2020-02-27 12:09:01 PST
Canhai Chen
Comment 2 2020-02-27 15:44:48 PST
chris fleizach
Comment 3 2020-03-10 17:37:30 PDT
Comment on attachment 391935 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=391935&action=review > Source/WebCore/ChangeLog:9 > + When accessibilityReplaceRange:withText: is called to insert or replace text, there should be an should be "a" > Source/WebCore/ChangeLog:10 > + AXValueChanged notification posted with correct user info to notify the AX client that the text value with "the" correct > Source/WebCore/ChangeLog:11 > + has been changed with detail info about the change. detailed > Source/WebCore/ChangeLog:13 > + Post notification in Editor::replaceSelectionWithFragment for EditAction::Insert edit type Post "a"
Canhai Chen
Comment 4 2020-03-10 17:57:05 PDT
WebKit Commit Bot
Comment 5 2020-03-11 18:22:16 PDT
Comment on attachment 393195 [details] Patch Clearing flags on attachment: 393195 Committed r258303: <https://trac.webkit.org/changeset/258303>
WebKit Commit Bot
Comment 6 2020-03-11 18:22:18 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.