AX: accessibilityReplaceRange:withText: doesn't post an AXValueChanged notification like when typing with kb https://bugs.webkit.org/show_bug.cgi?id=208332 <rdar://problem/58489685>

Patch by Canhai Chen <canhai_chen@apple.com> on 2020-03-11
Reviewed by Chris Fleizach.

Source/WebCore:

When accessibilityReplaceRange:withText: is called to insert or replace text, there should be a
AXValueChanged notification posted with the correct user info to notify the AX client that the text value
has been changed with detailed info about the change.

Post a notification in Editor::replaceSelectionWithFragment for EditAction::Insert edit type
with replaced text and selection.

Add a new test for text replacement value change notification in editable div, text input, and textarea,
including direct text insertion and replace-and-insert.

Test: accessibility/mac/replace-text-with-range-value-change-notification.html

* editing/Editor.cpp:
(WebCore::Editor::replaceSelectionWithFragment):
* editing/ReplaceSelectionCommand.h:
(WebCore::ReplaceSelectionCommand::documentFragmentPlainText const):

LayoutTests:

Test text replacement value change notification in editable div, text input, and textarea,
including direct text insertion and replace-and-insert.

* accessibility/mac/replace-text-with-range-value-change-notification-expected.txt: Added.
* accessibility/mac/replace-text-with-range-value-change-notification.html: Added.

Canonical link: https://commits.webkit.org/221875@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258303 268f45cc-cd09-0410-ab3c-d52691b4dbfc