Source/WebCore/editing/ReplaceSelectionCommand.h
@@ -52,6 +52,7 @@ public:
     }
 
     VisibleSelection visibleSelectionForInsertedText() const { return m_visibleSelectionForInsertedText; }
+    String documentFragmentPlainText() const { return m_documentFragmentPlainText; }
 
     RefPtr<Range> insertedContentRange() const;
 
